--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   </head>
   <body ng-app="app" ng-controller="RootCtrl as root">
     <div id="wallpaper">
-      <video autoplay="" loop="" width="100%" height="100%" src="./video/mikumiku.mp4">
+      <video autoplay="" loop="" width="100%" height="100%">
+        <source src="./video/video.mp4"  type="video/mp4">
+      </video>
     </div>
   </body>
 </html>
