--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body ng-app="app" ng-controller="RootCtrl as root">
     <div id="wallpaper">
       <video autoplay="" loop="" width="100%" height="100%">
-        <source src="./video/video.mp4"  type="video/mp4">
+        <source src="../../video/video.mp4"  type="video/mp4">
       </video>
     </div>
   </body>
